<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!-- Movies Fragment -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tictac.moviesapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
    </fragment>

    <!-- TV Shows Fragment -->
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.tictac.moviesapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_tv_shows">
        <action
            android:id="@+id/action_navigation_dashboard_to_tvShowDetailFragment"
            app:destination="@id/tvShowDetailFragment" />
    </fragment>

    <!-- People Fragment -->
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.tictac.moviesapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_people">
        <action
            android:id="@+id/action_navigation_notifications_to_personDetailFragment"
            app:destination="@id/personDetailFragment" />
    </fragment>

    <!-- Detail Fragments -->
    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.tictac.moviesapp.ui.detail.MovieDetailFragment"
        android:label="Movie Details"
        tools:layout="@layout/fragment_movie_detail">
        <argument
            android:name="movieId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/tvShowDetailFragment"
        android:name="com.tictac.moviesapp.ui.detail.TVShowDetailFragment"
        android:label="TV Show Details"
        tools:layout="@layout/fragment_tv_show_detail">
        <argument
            android:name="tvShowId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/personDetailFragment"
        android:name="com.tictac.moviesapp.ui.detail.PersonDetailFragment"
        android:label="Person Details"
        tools:layout="@layout/fragment_person_detail">
        <argument
            android:name="personId"
            app:argType="integer" />
    </fragment>
</navigation>